--- a/coronavirus_v2.ipynb
+++ b/coronavirus_v2.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -58,8 +58,8 @@
       " New Cases \t\t: +52,362\n",
       " Total Deaths \t\t: 41,245\n",
       " New Deaths \t\t: +3,477\n",
-      " Total Recovered \t: 174,523\n",
-      " Active Cases \t\t: 621,253\n",
+      " Total Recovered \t: 176,040\n",
+      " Active Cases \t\t: 619,736\n",
       " Serious Critical \t: 30,964\n"
      ]
     }
@@ -83,14 +83,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<<Yesterday UPDATE>>\n",
+      "<<Yesterday>>\n",
       " Total Cases \t\t: 784,659\n",
       " New Cases \t\t: +61,269\n",
       " Total Deaths \t\t: 37,768\n",
@@ -102,7 +102,7 @@
     }
    ],
    "source": [
-    "print(\"<<Yesterday UPDATE>>\")\n",
+    "print(\"<<Yesterday>>\")\n",
     "print(' Total Cases \\t\\t: {}\\n New Cases \\t\\t: {}\\n Total Deaths \\t\\t: {}\\n New Deaths \\t\\t: {}\\n Total Recovered \\t: {}\\n\\\n",
     " Active Cases \\t\\t: {}\\n Serious Critical \\t: {}'.format(yesterday_number[1],yesterday_number[2],yesterday_number[3],yesterday_number[4]\\\n",
     "                                                 ,yesterday_number[5],yesterday_number[6],yesterday_number[7]))"
