--- a/coronavirus_v2.ipynb
+++ b/coronavirus_v2.ipynb
@@ -20,55 +20,58 @@
     "from datetime import datetime, timedelta\n",
     "import numpy as np\n",
     "import requests\n",
-    "from bs4 import BeautifulSoup"
+    "from bs4 import BeautifulSoup\n",
+    "from datetime import datetime \n",
+    "import dateutil.tz"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "URL = 'https://www.worldometers.info/coronavirus/'\n",
-    "page = requests.get(URL)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "soup = BeautifulSoup(page.content, 'html.parser')\n",
-    "today_number = [txt.text for txt in soup.find_all('tr', class_='total_row')[0].find_all('td')]\n",
-    "yesterday_number = [txt.text for txt in soup.find_all('tr', class_='total_row')[1].find_all('td')]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<<LATEST UPDATE>>\n",
-      " Total Cases \t\t: 837,021\n",
-      " New Cases \t\t: +52,362\n",
-      " Total Deaths \t\t: 41,245\n",
-      " New Deaths \t\t: +3,477\n",
-      " Total Recovered \t: 176,040\n",
-      " Active Cases \t\t: 619,736\n",
-      " Serious Critical \t: 30,964\n"
+      "Data Pulled @ 2020-03-31 18:13:48.982694+00:00\n",
+      "\n",
+      "<<RECENT UPDATE>>\n",
+      " Total Cases \t\t: 837,115\n",
+      " New Cases \t\t: +52,456\n",
+      " Total Deaths \t\t: 41,249\n",
+      " New Deaths \t\t: +3,481\n",
+      " Total Recovered \t: 176,058\n",
+      " Active Cases \t\t: 619,808\n",
+      " Serious Critical \t: 31,473\n",
+      "\n",
+      "<<Yesterday>>\n",
+      " Total Cases \t\t: 784,659\n",
+      " New Cases \t\t: +61,269\n",
+      " Total Deaths \t\t: 37,768\n",
+      " New Deaths \t\t: +3,703\n",
+      " Total Recovered \t: 164,783\n",
+      " Active Cases \t\t: 582,108\n",
+      " Serious Critical \t: 29,706\n"
      ]
     }
    ],
    "source": [
-    "print(\"<<LATEST UPDATE>>\")\n",
+    "URL = 'https://www.worldometers.info/coronavirus/'\n",
+    "page = requests.get(URL)\n",
+    "soup = BeautifulSoup(page.content, 'html.parser')\n",
+    "today_number = [txt.text for txt in soup.find_all('tr', class_='total_row')[0].find_all('td')]\n",
+    "yesterday_number = [txt.text for txt in soup.find_all('tr', class_='total_row')[1].find_all('td')]\n",
+    "now = datetime.now(dateutil.tz.tzutc())\n",
+    "print(\"Data Pulled @ {}\".format(now))\n",
+    "print(\"\\n<<RECENT UPDATE>>\")\n",
     "print(' Total Cases \\t\\t: {}\\n New Cases \\t\\t: {}\\n Total Deaths \\t\\t: {}\\n New Deaths \\t\\t: {}\\n Total Recovered \\t: {}\\n\\\n",
     " Active Cases \\t\\t: {}\\n Serious Critical \\t: {}'.format(today_number[1],today_number[2],today_number[3],today_number[4]\\\n",
     "                                                 ,today_number[5],today_number[6],today_number[7]))\n",
+    "print(\"\\n<<Yesterday>>\")\n",
+    "print(' Total Cases \\t\\t: {}\\n New Cases \\t\\t: {}\\n Total Deaths \\t\\t: {}\\n New Deaths \\t\\t: {}\\n Total Recovered \\t: {}\\n\\\n",
+    " Active Cases \\t\\t: {}\\n Serious Critical \\t: {}'.format(yesterday_number[1],yesterday_number[2],yesterday_number[3],yesterday_number[4]\\\n",
+    "                                                 ,yesterday_number[5],yesterday_number[6],yesterday_number[7]))\n",
     "\n",
     "# job_elems = soup.find_all('script', type='text/javascript')\n",
     "# for job_elem in job_elems:\n",
@@ -82,33 +85,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<<Yesterday>>\n",
-      " Total Cases \t\t: 784,659\n",
-      " New Cases \t\t: +61,269\n",
-      " Total Deaths \t\t: 37,768\n",
-      " New Deaths \t\t: +3,703\n",
-      " Total Recovered \t: 164,783\n",
-      " Active Cases \t\t: 582,108\n",
-      " Serious Critical \t: 29,706\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(\"<<Yesterday>>\")\n",
-    "print(' Total Cases \\t\\t: {}\\n New Cases \\t\\t: {}\\n Total Deaths \\t\\t: {}\\n New Deaths \\t\\t: {}\\n Total Recovered \\t: {}\\n\\\n",
-    " Active Cases \\t\\t: {}\\n Serious Critical \\t: {}'.format(yesterday_number[1],yesterday_number[2],yesterday_number[3],yesterday_number[4]\\\n",
-    "                                                 ,yesterday_number[5],yesterday_number[6],yesterday_number[7]))"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -118,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -359,7 +335,7 @@
        "[5 rows x 200 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -380,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -621,7 +597,7 @@
        "[5 rows x 200 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -642,7 +618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -875,7 +851,7 @@
        "[5 rows x 179 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -905,7 +881,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -939,7 +915,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -957,7 +933,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {
     "scrolled": true
    },
@@ -1192,7 +1168,7 @@
        "[5 rows x 23 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1204,7 +1180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1445,7 +1421,7 @@
        "[5 rows x 23 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1465,7 +1441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1780,7 +1756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -2144,7 +2120,7 @@
        "Malaysia           2626.0             479        37.0      7.170543      True  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
